LU-565 Update llite_nfc.c to 2.x interop fid API

It seems we forgot to update lustre NFS code when converting everything
to FID interop API. This lead to ESTALE errors trying to export NFS
from 1.8 client that ewas mounting 2.x MDT due to inode generation
and fid generation mismatch (inode generation always 0 for interop).

Signed-off-by: Oleg Drokin <green@whamcloud.com>
Change-Id: Ic88671826da73b19857a42ceb9ac8dd0fd35b244